# effective_complexity_2

./: README.md  aggregate_results.py  pyproject.toml  run_all_experiments.py  unpackaged_simple_script_version.py
effective_complexity/cli/: dataset.py  evaluate.py  train.py
effective_complexity/configs/: config.yaml  default.yaml
effective_complexity/data/: collate.py  datasets.py  synthetic.py
effective_complexity/evaluation/: __init__.py  alignment.py  cca.py  diversity.py  pca.py  pca_plots.py  pca_spectrum.py  plots.py  residual_cca.py
effective_complexity/experiments/: runner.py  single_run.py
effective_complexity/models/: __init__.py  factory.py  init.py  mlp.py  resmlp.py
effective_complexity/training/: __init__.py  early_stopping.py  losses.py  optim.py  regularization.py  train.py  validate.py
effective_complexity/utils/: io.py  results.py  seed.py
experiments_out/C3_T3_S20_20260206_001424/: all_results.json
experiments_out/C3_T3_S20_20260206_001424/mlp_large/seed_0/: config.json
experiments_out/C3_T3_S20_20260206_001424/mlp_large/seed_1/: config.json
experiments_out/C3_T3_S20_20260206_001424/mlp_medium/seed_0/: best_model.pt  config.json
experiments_out/C3_T3_S20_20260206_001424/mlp_medium/seed_1/: best_model.pt  config.json
experiments_out/C3_T3_S20_20260206_001424/mlp_medium/seed_2/: best_model.pt
experiments_out/C3_T3_S20_20260206_001424/mlp_medium/seed_3/: config.json
experiments_out/C3_T3_S20_20260206_082800/: all_results.json
experiments_out/C3_T3_S30_20260206_120543/: all_results.json
experiments_out/C4_T10_S20_20260206_105818/: all_results.json
(+142 files in other folders)
